; ModuleID = '/home/carl/AnghaBench/vlc/lib/extr_media_player.c_on_chapter_selection_changed.c'
source_filename = "/home/carl/AnghaBench/vlc/lib/extr_media_player.c_on_chapter_selection_changed.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vlc_player_title = type { i32 }
%struct.vlc_player_chapter = type { i32 }
%struct.TYPE_8__ = type { i32 }
%struct.TYPE_9__ = type { %struct.TYPE_7__, i32 }
%struct.TYPE_7__ = type { %struct.TYPE_6__ }
%struct.TYPE_6__ = type { i64 }

@libvlc_MediaPlayerChapterChanged = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, %struct.vlc_player_title*, i64, %struct.vlc_player_chapter*, i64, i8*)* @on_chapter_selection_changed to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @on_chapter_selection_changed(i32* %0, %struct.vlc_player_title* %1, i64 %2, %struct.vlc_player_chapter* %3, i64 %4, i8* %5) #0 {
  %7 = alloca i32*, align 8
  %8 = alloca %struct.vlc_player_title*, align 8
  %9 = alloca i64, align 8
  %10 = alloca %struct.vlc_player_chapter*, align 8
  %11 = alloca i64, align 8
  %12 = alloca i8*, align 8
  %13 = alloca %struct.TYPE_8__*, align 8
  %14 = alloca %struct.TYPE_9__, align 8
  store i32* %0, i32** %7, align 8
  store %struct.vlc_player_title* %1, %struct.vlc_player_title** %8, align 8
  store i64 %2, i64* %9, align 8
  store %struct.vlc_player_chapter* %3, %struct.vlc_player_chapter** %10, align 8
  store i64 %4, i64* %11, align 8
  store i8* %5, i8** %12, align 8
  %15 = load i32*, i32** %7, align 8
  %16 = load %struct.vlc_player_title*, %struct.vlc_player_title** %8, align 8
  %17 = load i64, i64* %9, align 8
  %18 = load %struct.vlc_player_chapter*, %struct.vlc_player_chapter** %10, align 8
  %19 = load i8*, i8** %12, align 8
  %20 = bitcast i8* %19 to %struct.TYPE_8__*
  store %struct.TYPE_8__* %20, %struct.TYPE_8__** %13, align 8
  %21 = load i32, i32* @libvlc_MediaPlayerChapterChanged, align 4
  %22 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %14, i32 0, i32 1
  store i32 %21, i32* %22, align 8
  %23 = load i64, i64* %11, align 8
  %24 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %14, i32 0, i32 0
  %25 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %24, i32 0, i32 0
  %26 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %25, i32 0, i32 0
  store i64 %23, i64* %26, align 8
  %27 = load %struct.TYPE_8__*, %struct.TYPE_8__** %13, align 8
  %28 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %27, i32 0, i32 0
  %29 = call i32 @libvlc_event_send(i32* %28, %struct.TYPE_9__* %14)
  ret void
}

declare dso_local i32 @libvlc_event_send(i32*, %struct.TYPE_9__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
